# KRecipes2

./: CMakeLists.txt  krecipes2.pro
src/: categoryitem.cpp  categoryitem.h  krecipes2.cpp  krecipes2.h  krecipes2ui.rc  krecipes2view.cpp  krecipes2view.h  krecipes2view.ui  main.cpp  recipelistmodel.cpp  recipelistmodel.h  tableeditor.cpp  tableeditor.h
src/backends/: .recipedb.cpp.kate-swp  .recipedb.h.kate-swp  literecipedb.cpp  literecipedb.h  recipedb.cpp  recipedb.h
